[gd_scene load_steps=5 format=3 uid="uid://ba54fsx3qf4fg"]

[ext_resource type="Script" uid="uid://du2d7awi0g6hw" path="res://scripts/ui/menus/shop.gd" id="1_tbtvl"]
[ext_resource type="Texture2D" uid="uid://dl8iklm0q0k10" path="res://assets/visual/textures/menu_texture.png" id="2_ebf16"]
[ext_resource type="Script" uid="uid://clwnvahvxlrto" path="res://scripts/ui/dynamic_button.gd" id="2_tllji"]

[sub_resource type="Theme" id="Theme_l6cm7"]
RichTextLabel/colors/font_selected_color = Color(0.615686, 0, 0, 1)
RichTextLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 24
RichTextLabel/constants/shadow_offset_x = -10
RichTextLabel/constants/shadow_offset_y = 6
RichTextLabel/constants/shadow_outline_size = 24
RichTextLabel/font_sizes/bold_font_size = 64
RichTextLabel/font_sizes/bold_italics_font_size = 64
RichTextLabel/font_sizes/italics_font_size = 64
RichTextLabel/font_sizes/mono_font_size = 64
RichTextLabel/font_sizes/normal_font_size = 64

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tbtvl")

[node name="Background" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 0
mouse_filter = 2

[node name="BG" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -949.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="Background/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme = SubResource("Theme_l6cm7")
bbcode_enabled = true
text = "[wave]Shop[/wave]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_left = 628.0
offset_top = 133.0
offset_right = 1283.0
offset_bottom = 1048.0
texture = ExtResource("2_ebf16")

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Buttons" type="GridContainer" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Continue
"
script = ExtResource("2_tllji")

[node name="MoreRope" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "More Rope (+ 1 meter)"
script = ExtResource("2_tllji")

[node name="MorePins" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Addional pin"
script = ExtResource("2_tllji")

[node name="MoreHP" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "More HP"
script = ExtResource("2_tllji")

[node name="BuyShield" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Buy Shield (1/8)
"
script = ExtResource("2_tllji")

[node name="BuySlushie" type="Button" parent="Menu/HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Buy Slushie (freezes
enemies for 5 seconds)
"
script = ExtResource("2_tllji")

[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/MoreRope" to="." method="_on_more_rope_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/MorePins" to="." method="_on_more_pins_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/MoreHP" to="." method="_on_more_hp_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/BuyShield" to="." method="_on_buy_shield_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/Buttons/BuySlushie" to="." method="_on_buy_slushie_pressed"]
